bitstruct/tests/ui/empty_bits.stderr
error: empty bit range specified
 --> $DIR/empty_bits.rs:5:30
  |
5 |         field1: u8 = 19 .. 19;
  |                              ^
